update html1 and adding html2

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Couresra!</title>
+	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! I am so behind!</h1>
+	<h1>Hello Father! Here is the best demo I could come up with.</h1>
+	<div>I am so behind on classes, but I am working on it.</div>
+	<div>To see my plan for future click
+		<a href="index2.html">Here</a>
+	</div>
 </body>
 </html>
