--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 	<h1>Hello Father! Here is the best demo I could come up with.</h1>
 	<div>I am so behind on classes, but I am working on it.</div>
 	<div>To see my plan for future click
-		<a href="index2.html">Here</a>
+		<a href="index2.html" target="_blank">Here</a>
 	</div>
 </body>
 </html>
