Added second part to html2

--- a/site/index2.html
+++ b/site/index2.html
@@ -13,5 +13,21 @@
 			<li>No discord during classes</li>
 		</ul>
 	</div>
+	<h2>Updated Schedule</h2>
+	<div>
+		HTML course
+		<ul>
+			<li>same plan shifted 2 weeks</li>
+			<li>new end date is april 20</li>
+		</ul>
+	</div>
+	<div>
+		Machine Learning
+		<ul>
+			<li>I am pretty lost</li>
+			<li>Plan is to start over</li>
+			<li>New end date is June 6</li>
+		</ul>
+	</div>
 </body>
 </html>
